--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>guru.springframework</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.5-SNAPSHOT</version>
 
     <modules>
         <module>pet-clinic-data</module>
@@ -14,7 +14,7 @@
     <packaging>pom</packaging>
 
     <name>sfg-pet-clinic</name>
-    <description>SFG guru.springframework.sfgpetclinic.model.Pet Clinic Project</description>
+    <description>SFG Pet Clinic Project</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -47,19 +47,8 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:https://github.com/Patrick1ruls/sfg-pet-clinic.git
-        </developerConnection>
+        <developerConnection>scm:git:git@github.com:springframeworkguru/sfg-pet-clinic.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
-
-    <!--
-    <scm>
-        <url>https://github.com/Patrick1ruls/sfg-pet-clinic.git</url>
-        <connection>scm:git:git@github.com:Patrick1ruls/sfg-pet-clinic.git</connection>
-        <developerConnection>scm:git:git@github.com:Patrick1ruls/sfg-pet-clinic.git</developerConnection>
-        <tag>sfg-spring-petclinic-0.0.1</tag>
-  </scm>
-  -->
-
 
 </project>
